--- a/tjanster/brf/forbesiktning/index.html
+++ b/tjanster/brf/forbesiktning/index.html
@@ -2,7 +2,7 @@
 <html lang="se">
 
 <head>
-	<title>Besiktningsman.se | Garantibesiktning BRF</title>
+	<title>Besiktningsman.se | Förbesiktning BRF</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -10,22 +10,22 @@
 	<link rel="shortcut icon" href="../../../favicon.ico">
 	<!-- Making the website social media friendly-->
 	<meta name="description"
-		content="Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren? Då kan en garantibesiktning behövas." />
+		content="En förbesiktning kan vara nödvändig om någon del av entreprenaden kan vara svår att besikta i slutskedet." />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title"
-		content="Garantibesiktning ger din BRF trygghet genom att byggfel upptäcks innan garantitiden löper ut." />
+		content="En förbesiktning kan vara nödvändig om någon del av entreprenaden kan vara svår att besikta i slutskedet." />
 	<meta property="og:description"
-		content="Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren? Då kan en garantibesiktning behövas." />
-	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/garantibesiktning" />
+		content="En förbesiktning kan vara nödvändig om någon del av entreprenaden kan vara svår att besikta i slutskedet." />
+	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/forbesiktning" />
 	<meta property="og:site_name" content="https://www.besiktningsman.se">
 	<meta property="og:image" content="../../../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:title"
-		content="Garantibesiktning ger din BRF trygghet genom att byggfel upptäcks innan garantitiden löper ut." />
+		content="En förbesiktning kan vara nödvändig om någon del av entreprenaden kan vara svår att besikta i slutskedet." />
 	<meta name="twitter:description"
-		content="Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren? Då kan en garantibesiktning behövas." />
+		content="En förbesiktning kan vara nödvändig om någon del av entreprenaden kan vara svår att besikta i slutskedet." />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
 	<link
