Changed shortcut from "Förbesiktning" to "Garantibesiktning".

--- a/tjanster/brf/forbesiktning/index.html
+++ b/tjanster/brf/forbesiktning/index.html
@@ -556,8 +556,8 @@
 				<a href="../../brf/" class="common-Button text-blue">
 					Till tjänstlistan
 				</a>
-				<a href="../../brf/#förbesiktning" class="common-Button text-blue">
-					Till förbesiktning
+				<a href="../../brf/garantibesiktning" class="common-Button text-blue">
+					Till garantibesiktning
 				</a>
 				<a href="../../brf/#slutbesiktning" class="common-Button text-blue">
 					Till slutbesiktning
