Removed the text for "Förbesiktning", and instead added a link to the page "Förbesiktning".

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -322,59 +322,11 @@
 							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
 							Statusbesiktning
 						</a>
+						<a href="../brf/forbesiktning/" class="common-Button text-blue" style="">
+							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
+							Förbesiktning
+						</a>
 						<div class="accordion">
-							<h3>Förbesiktning</h3>
-							<div>
-								<ul>
-									<li class="col-5-12">
-										<p class="bold margin-bottom-1">
-											Förbesiktning kan ske när som helst under byggprocessen om någon part önskar
-											det. Skälet kan exempelvis vara att någon del av entreprenaden kan bli svår
-											att besikta eller felavhjälpa, om man väntar till efter färdigställandet.
-										</p>
-										<p>
-											Besiktningsman.se erbjuder förbesiktning för nyproduktion och ROT enligt
-											regelverken AB04 och ABT 06 kap 7 (se nedan). Besiktningen utförs av
-											opartiska besiktningsmän godkända av SBR med särskild fackkompetens för
-											aktuellt
-											besiktningsobjekt. Vi erbjuder
-											även komplett besiktningsgrupp.
-										</p>
-										<p>
-											Besiktningen utförs okulärt och dokumenteras digitalt av besiktningsmannen
-											på plats. Felbilaga finns tillgänglig omgående efter besiktningen och
-											komplett utlåtande levereras inom 3 arbetsdagar.
-										</p>
-										<p>
-											Förbesiktning kan beställas som en enstaka tjänst eller ingå i en
-											paketlösning med flera besiktningstjänster.
-											<br>
-											<br> Pris offereras separat.
-										</p>
-										<p class="bold margin-bottom-1">Enligt AB04 och ABT06 Kap 7 §1 har part rätt att
-											påkalla förbesiktning om</p>
-										<p>
-											<b>1</b> arbete efter färdigställandet av entreprenaden inte är eller inte
-											utan väsentligt ingrepp blir åtkomligt för besiktning.
-										</p>
-										<p>
-											<b>2</b> avhjälpande av fel i arbete efter färdigställande skulle vara till
-											väsentlig olägenhet för parten</p>
-										<p>
-											<b>3</b> arbete före färdigställande tas i bruk av beställaren eller</p>
-										<p>
-											<b>4</b> i övrigt särskilda skäl föreligger</p>
-										<p class="quotes">”Kommentar till kap 7 §1 i AB04 och ABT06, Ett särskilt skäl
-											för förbesiktning kan vara att parterna i förväg vill få besiktningsmannens
-											bedömning av kontraktsenhetligheten av visst arbete som antingen återkommer
-											i ett
-											stort antal eller gäller
-											principer eller kvalitetskrav för utförandet, sk normerande besiktning.”
-										</p>
-
-									</li>
-								</ul>
-							</div>
 							<h3>Slutbesiktning</h3>
 							<div>
 								<ul>
