Added a http://ispect.se link

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -209,7 +209,7 @@
 							Med vår digitaliserade besiktningsprocess som omfattar hela byggprocessen,
 							har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt
 						</p>
-						<a href="../ispect/">
+						<a href="http://ispect.se" target="_blank">
 							<p class="common-Link">Mer om vår digitaliserade besiktningsprocess<i class="icono-arrow2-left"></i></p>
 						</a>
 					</div>
