- Added two posts from LinkedIn. - Removed the text about us seeking employees.

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -264,6 +264,12 @@
 			<!-- newsflow list / latest first -->
 			<div class="list">
 				<span>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6755443251211182081" height="1000" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
+				</span>
+				<span>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6754422138586898432" height="1000" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
+				</span>
+				<span>
 					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6710106467954917376" height="1000" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
 				</span>
 				<span>
@@ -291,7 +297,7 @@
 					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6682205341905666048" height="900px" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
 				</span>
 				<hr>
-				<span class="common-BodyTitle">
+				<!-- <span class="common-BodyTitle">
 					<h3 class="common-BodyTitle">Är du vår nästa kollega?</h3>
 					<p class="common-BodyText">
 						Har du något eller några års erfarenhet från byggbranschen och vill ta nästa steg i karriären där du
@@ -300,7 +306,7 @@
 					<a class="common-Link" href="https://www.besiktningsman.se/karriar/" data-mode="1" target="_blank"></a>
 						<p>Ansök här</p>
 					</a>
-				</span>
+				</span> -->
 				<!-- <strong class="muted common-UppercaseText date">Apr 25, 2019</strong> -->
 				<hr>
 				<span href="#" class="common-BodyTitle">
