Added a link to the blogg

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -224,9 +224,12 @@
 		<div class="stripe s4"></div>
 	</div>
 	<nav class="productNav">
-		<div class="container-xl">
-			<a class="home colorize" href="/newsroom">
-				<span class="common-BodyTitle">Nyhetsrum</span>
+		<div class="container-xl" style="clear: both">
+			<a class="home colorize" href="#" style="float: left">
+				<span class="common-BodyTitle";>Nyhetsrum</span>
+			</a>
+			<a class="home colorize" href="../blogg/index.html" style="margin-left: 15%;">
+				<span class="common-BodyTitle";>Blogg</span>
 			</a>
 		</div>
 	</nav>
@@ -258,9 +261,9 @@
 	<section class="container-lg news" id="">
 		<div class="news-list">
 			<!-- newsflow title -->
-			<h2 class="title common-BodyTitle" style="display: flex;flex-direction: column;">
-				Händelser
-			</h2>
+				<h2 class="title common-BodyTitle" style="display:flex; flex-direction:column;">
+					Händelser
+				</h2>
 			<!-- newsflow list / latest first -->
 			<div class="list">
 				<span>
@@ -308,7 +311,6 @@
 					</a>
 				</span> -->
 				<!-- <strong class="muted common-UppercaseText date">Apr 25, 2019</strong> -->
-				<hr>
 				<span href="#" class="common-BodyTitle">
 					<h3 class="common-BodyTitle">Kv Ektorp, Nacka</h3>
 					<p class="common-BodyText">
