Changed margin units from px to rem

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -228,7 +228,7 @@
 			<a class="home colorize" href="#" style="float: left">
 				<span class="common-BodyTitle";>Nyhetsrum</span>
 			</a>
-			<a class="home colorize" href="../blogg/index.html" style="margin-left: 15%;">
+			<a class="home colorize" href="../blogg/index.html" style="margin-left: 30rem;">
 				<span class="common-BodyTitle";>Blogg</span>
 			</a>
 		</div>
