Changed from "blogg" to "besiktningsbloggen"

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -229,7 +229,7 @@
 				<span class="common-BodyTitle";>Nyhetsrum</span>
 			</a>
 			<a class="home colorize" href="../blogg/index.html" style="margin-left: 30rem;">
-				<span class="common-BodyTitle";>Blogg</span>
+				<span class="common-BodyTitle";>Besiktningsbloggen</span>
 			</a>
 		</div>
 	</nav>
