Commented out old content from 2018

--- a/tjanster/brf/forbesiktning/bekraftelse/index.html
+++ b/tjanster/brf/forbesiktning/bekraftelse/index.html
@@ -267,7 +267,7 @@
 								<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
 									<h3 class="margin-bottom-1">Byggintelligens</h3>
 									<a target="_blank" href="http://bit.ly/byggintelligens5_20182019">
-										<p class="common-Link">Tack för 2018 – ett bra år!</p>
+										<!-- <p class="common-Link">Tack för 2018 – ett bra år!</p> -->
 									</a>
 									<a href="http://bit.ly/byggintelligens2_2018_utveckling">
 										<p class="common-Link">Besiktningsbranschen ska utvecklas och synas!</p>
@@ -276,7 +276,7 @@
 										<p class="common-Link">Förstörelsen av Pålsundet</p>
 									</a>
 									<a href="http://bit.ly/byggintelligens4_2017">
-										<p class="common-Link">Nu samlar vi kraft för 2018!</p>
+										<!-- <p class="common-Link">Nu samlar vi kraft för 2018!</p> -->
 									</a>
 								</li>
 						</ul>
