--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -448,7 +448,7 @@
 			<li class="col-4-12">
 				<a href="http://bit.ly/byggintelligens5_20182019" target="_blank" class="article">
 					<img src="../assets/img/nyheter/bm_xmas.jpg" alt="">
-					<p class="common-Link">Tack för 2018 – ett bra år!</p>
+					<!-- <p class="common-Link">Tack för 2018 – ett bra år!</p> --> 
 				</a>
 			</li>
 			<li class="col-4-12">
@@ -466,7 +466,7 @@
 			<li class="col-4-12">
 				<a href="http://bit.ly/byggintelligens4_2017" target="_blank" class="article">
 					<img src="../assets/img/nyheter/bm_kraft2018.jpg" alt="">
-					<p class="common-Link">Nu samlar vi kraft för 2018!</p>
+					<!-- <p class="common-Link">Nu samlar vi kraft för 2018!</p> -->
 				</a>
 			</li>
 		</ul>
@@ -527,7 +527,7 @@
 								<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
 									<h3 class="margin-bottom-1">Byggintelligens</h3>
 									<a target="_blank" href="http://bit.ly/byggintelligens5_20182019">
-										<p class="common-Link">Tack för 2018 – ett bra år!</p>
+										<!-- <p class="common-Link">Tack för 2018 – ett bra år!</p> -->
 									</a>
 									<a href="http://bit.ly/byggintelligens2_2018_utveckling">
 										<p class="common-Link">Besiktningsbranschen ska utvecklas och synas!</p>
@@ -536,7 +536,7 @@
 										<p class="common-Link">Förstörelsen av Pålsundet</p>
 									</a>
 									<a href="http://bit.ly/byggintelligens4_2017">
-										<p class="common-Link">Nu samlar vi kraft för 2018!</p>
+										<!-- <p class="common-Link">Nu samlar vi kraft för 2018!</p> -->
 									</a>
 								</li>
 							</ul>
