- Redirected all links from Medium to websites native blog (the footer on all pages). - Commented out some irrelevant links in the footer (to Byggintelligens). - Changed the headings in the footer to "DEBATTARTIKLAR" and "BESIKTNINGSBLOGGEN".

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -399,79 +399,78 @@
 		<h3 class="">Besiktningsbloggen</h3>
 		<ul class="flex margin-bottom-3" style="padding-left: 0% !important;">
 			<li class="col-4-12">
-				<a href="http://bit.ly/bm_debattartikel_svd" target="_blank" class="article">
-					<img src="../assets/img/nyheter/bm_svd.jpg" alt="">
-					<p class="common-Link">Besiktningsman.se svarar i SvD på debattinlägg om byggbranschens systemfel</p>
-				</a>
-			</li>
-			<li class="col-4-12">
-				<a href="https://medium.com/besiktningsbloggen/v%C3%A4lkommen-till-besiktningsbranschens-och-byggbranschens-nya-guld%C3%A5lder-a6b6a0ac238b" target="_blank" class="article">
+				<a href="https://besiktningsman.se/blogg/?p=v%C3%A4lkommen-till-besiktningsbranschens-och-byggbranschens-nya-guld%C3%A5lder" class="article">
 					<img src="../assets/img/nyheter/bm_guldalder.jpeg" alt="">
 					<p class="common-Link">Välkommen till besiktningsbranschens (och byggbranschens) nya guldålder!</p>
 				</a>
 			</li>
 			<li class="col-4-12">
-				<a href="https://medium.com/besiktningsbloggen/sluta-betala-oss-de0640a6b6c9" target="_blank" class="article">
+				<a href="https://besiktningsman.se/blogg/?p=sluta-betala-oss" class="article">
 					<img src="../assets/img/nyheter/bm_slutabetalaoss.jpeg" alt="">
 					<p class="common-Link">Sluta betala oss!</p>
 				</a>
 			</li>
 			<li class="col-4-12">
-				<a href="https://medium.com/besiktningsbloggen/har-du-byggkort-e2adb48b2508" target="_blank" class="article">
+				<a href="https://besiktningsman.se/blogg/?p=har-du-byggkort" class="article">
 					<img src="../assets/img/nyheter/bm_byggkort.jpeg" alt="">
 					<p class="common-Link">Har du byggkort?!</p>
 				</a>
 			</li>
 			<li class="col-4-12">
-				<a href="https://medium.com/@magnusjanson/dags-att-sluta-subventionera-byggfel-e6a3f8f17a90" target="_blank" class="article">
+				<a href="https://besiktningsman.se/blogg/?p=dags-att-sluta-subventionera-byggfel" class="article">
 					<img src="../assets/img/nyheter/bm_subventionera.jpeg" alt="">
 					<p class="common-Link">Dags att sluta subventionera byggfel!</p>
 				</a>
 			</li>
 			<li class="col-4-12">
-				<a href="https://medium.com/@magnusjanson/st%C3%A4ll-skall-krav-%C3%A4ven-p%C3%A5-best%C3%A4llaren-ab0fcb0c9f20" target="_blank" class="article">
+				<a href="https://besiktningsman.se/blogg/?p=stall-skall-krav" class="article">
 					<img src="../assets/img/nyheter/bm_skallkrav.jpg" alt="">
 					<p class="common-Link">Ställ Skall-krav även på beställaren!</p>
 				</a>
 			</li>
 			<li class="col-4-12">
-				<a href="https://medium.com/besiktningsbloggen/lonsammare-projekt-c8f9adba4e2" target="_blank" class="article">
+				<a href="https://besiktningsman.se/blogg/?p=ska-vi-ha-en-billig-besiktning-eller-tjaena-pengar-paa-den" class="article">
 					<img src="../assets/img/nyheter/bm_lonsammareprojekt.jpeg" alt="">
 					<p class="common-Link">Ska vi ha en billig besiktning — eller tjäna pengar på den?</p>
 				</a>
 			</li>
-		</ul>
-	</section>
-	<section class="container-lg" id="byggintelligens">
-		<h3 class="">Nyhetsbrevet Byggintelligens</h3>
-		<ul class="flex margin-bottom-3">
 			<li class="col-4-12">
-				<a href="http://bit.ly/byggintelligens5_20182019" target="_blank" class="article">
-					<img src="../assets/img/nyheter/bm_xmas.jpg" alt="">
-					<!-- <p class="common-Link">Tack för 2018 – ett bra år!</p> --> 
-				</a>
-			</li>
-			<li class="col-4-12">
-				<a href="http://bit.ly/byggintelligens2_2018_utveckling" target="_blank" class="article">
-					<img src="../assets/img/nyheter/bm_magnus.jpg" alt="">
-					<p class="common-Link">Besiktningsbranschen ska utvecklas och synas!</p>
-				</a>
-			</li>
-			<li class="col-4-12">
-				<a href="http://bit.ly/byggintelligens1_2018_palsundet" target="_blank" class="article">
-					<img src="../assets/img/nyheter/bm_palsundet.jpeg" alt="">
-					<p class="common-Link">Förstörelsen av Pålsundet</p>
-				</a>
-			</li>
-			<li class="col-4-12">
-				<a href="http://bit.ly/byggintelligens4_2017" target="_blank" class="article">
-					<img src="../assets/img/nyheter/bm_kraft2018.jpg" alt="">
-					<!-- <p class="common-Link">Nu samlar vi kraft för 2018!</p> -->
+				<a href="https://besiktningsman.se/blogg/?p=besiktningsman-se-svarar-i-svd-p%C3%A5-debattinl%C3%A4gg-om-byggbranschens-systemfel" class="article">
+					<img src="../assets/img/nyheter/bm_svd.jpg" alt="">
+					<p class="common-Link">Besiktningsman.se svarar i SvD på debattinlägg om byggbranschens systemfel</p>
 				</a>
 			</li>
 		</ul>
-
-	</section>
+	<!-- </section>
+		<section class="container-lg" id="byggintelligens">
+			<h3 class="">Nyhetsbrevet Byggintelligens</h3>
+			<ul class="flex margin-bottom-3">
+				<li class="col-4-12">
+					<a href="http://bit.ly/byggintelligens5_20182019" target="_blank" class="article">
+						<img src="../assets/img/nyheter/bm_xmas.jpg" alt="">
+						<p class="common-Link">Tack för 2018 – ett bra år!</p>
+					</a>
+				</li>
+				<li class="col-4-12">
+					<a href="http://bit.ly/byggintelligens2_2018_utveckling" target="_blank" class="article">
+						<img src="../assets/img/nyheter/bm_magnus.jpg" alt="">
+						<p class="common-Link">Här är filfunktionen som bidrar till att besiktningen utförs mot rätt handlingar.</p>
+					</a>
+				</li>
+				<li class="col-4-12">
+					<a href="http://bit.ly/byggintelligens1_2018_palsundet" target="_blank" class="article">
+						<img src="../assets/img/nyheter/bm_palsundet.jpeg" alt="">
+						<!-- https://besiktningsman.se/blogg/?p=har-du-byggkort -->
+					</a>
+				</li>
+				<li class="col-4-12">
+					<a href="http://bit.ly/byggintelligens4_2017" target="_blank" class="article">
+						<img src="../assets/img/nyheter/bm_kraft2018.jpg" alt="">
+						<p class="common-Link">Nu samlar vi kraft för 2018!</p> 
+					</a>
+				</li>
+			</ul> 
+	</section> -->
 	<!-- Footer -->
 	<section class="slide customFooter autoHeight">
 		<div class="content">
@@ -507,37 +506,37 @@
 									</a>
 								</li>
 								<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
-									<h3 class="margin-bottom-1">Besiktningsbloggen</h3>
-									<a class="" target="_blank" href="http://bit.ly/bm_debattartikel_svd">
+									<h3 class="margin-bottom-1">Debattartiklar</h3>
+									<a class="" href="https://besiktningsman.se/blogg/?p=besiktningsman-se-svarar-i-svd-p%C3%A5-debattinl%C3%A4gg-om-byggbranschens-systemfel">
 										<p class="text-blue">Besiktningsman.se svarar i SvD på debattinlägg om byggbranschens systemfel</p>
 									</a>
-									<a class="" target="_blank" href="https://medium.com/besiktningsbloggen/v%C3%A4lkommen-till-besiktningsbranschens-och-byggbranschens-nya-guld%C3%A5lder-a6b6a0ac238b">
+									<a class="" target="_blank" href="https://besiktningsman.se/blogg/?p=v%C3%A4lkommen-till-besiktningsbranschens-och-byggbranschens-nya-guld%C3%A5lder">
 										<p class="text-blue">Välkommen till besiktningsbranschens (och byggbranschens) nya guldålder!</p>
 									</a>
-									<a class="" target="_blank" href="https://medium.com/besiktningsbloggen/sluta-betala-oss-de0640a6b6c9">
+									<a class="" target="_blank" href="https://besiktningsman.se/blogg/?p=sluta-betala-oss">
 										<p class="text-blue">Sluta betala oss!</p>
 									</a>
-									<a class="" target="_blank" href="https://medium.com/besiktningsbloggen/har-du-byggkort-e2adb48b2508">
+									<a class="" target="_blank" href="https://besiktningsman.se/blogg/?p=har-du-byggkort">
 										<p class="text-blue">Har du byggkort?!</p>
 									</a>
-									<a class="" target="_blank" href="https://medium.com/besiktningsbloggen">
+									<a class=""  href="https://besiktningsman.se/blogg/index.html">
 										<p class="text-blue">Läs mer</p>
 									</a>
 								</li>
 								<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
-									<h3 class="margin-bottom-1">Byggintelligens</h3>
-									<a target="_blank" href="http://bit.ly/byggintelligens5_20182019">
-										<!-- <p class="common-Link">Tack för 2018 – ett bra år!</p> -->
-									</a>
-									<a href="http://bit.ly/byggintelligens2_2018_utveckling">
-										<p class="common-Link">Besiktningsbranschen ska utvecklas och synas!</p>
-									</a>
-									<a href="http://bit.ly/byggintelligens1_2018_palsundet">
-										<p class="common-Link">Förstörelsen av Pålsundet</p>
-									</a>
-									<a href="http://bit.ly/byggintelligens4_2017">
-										<!-- <p class="common-Link">Nu samlar vi kraft för 2018!</p> -->
-									</a>
+										<h3 class="margin-bottom-1">Besiktningsbloggen</h3>
+										<a target="_blank" href="http://bit.ly/byggintelligens5_20182019">
+											<p class="common-Link">iSpect - En plattform som bidrar till effektivare byggprojekt.</p> 
+										</a>
+										<a href="https://besiktningsman.se/blogg/?p=filfunktionen-i-ispect-bidrar-till-att-besiktningen-utf%C3%B6rs-mot-r%C3%A4tt-handlingar-publicerades-18-december-2020-redigera-artikeln-visa-statistik">
+											<p class="common-Link">Här är filfunktionen som bidrar till att besiktningen utförs mot rätt handlingar.</p>
+										</a>
+										<a href="http://bit.ly/byggintelligens1_2018_palsundet">
+											<!-- https://besiktningsman.se/blogg/?p=har-du-byggkort -->
+										</a>
+										<a href="http://bit.ly/byggintelligens4_2017">
+											<!-- <p class="common-Link">Nu samlar vi kraft för 2018!</p> -->
+										</a>
 								</li>
 							</ul>
 						</div>
@@ -575,7 +574,7 @@
 									</g>
 								</svg>
 							</a>
-							<a class="socialIcons" href="https://medium.com/besiktningsbloggen">
+							<a class="socialIcons" href="https://www.besiktningsman.se/blogg/index.html">
 								<svg version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
 									<g fill="none" fill-rule="evenodd">
 										<g fill="#47525D" fill-rule="nonzero">
