--- a/karriar/index.html
+++ b/karriar/index.html
@@ -341,34 +341,34 @@
 									</a>
 								</li>
 								<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
-									<h3 class="margin-bottom-1">Besiktningsbloggen</h3>
+									<h3 class="margin-bottom-1">Debattartiklar</h3>
 									<a class="" target="_blank"
-										href="https://medium.com/besiktningsbloggen/v%C3%A4lkommen-till-besiktningsbranschens-och-byggbranschens-nya-guld%C3%A5lder-a6b6a0ac238b">
+										href="https://besiktningsman.se/blogg/?p=v%C3%A4lkommen-till-besiktningsbranschens-och-byggbranschens-nya-guld%C3%A5lder">
 										<p class="text-blue">Välkommen till besiktningsbranschens (och byggbranschens)
 											nya guldålder!</p>
 									</a>
 									<a class="" target="_blank"
-										href="https://medium.com/besiktningsbloggen/sluta-betala-oss-de0640a6b6c9">
+										href="https://besiktningsman.se/blogg/?p=sluta-betala-oss">
 										<p class="text-blue">Sluta betala oss!</p>
 									</a>
 									<a class="" target="_blank"
-										href="https://medium.com/besiktningsbloggen/har-du-byggkort-e2adb48b2508">
+										href="https://besiktningsman.se/blogg/?p=har-du-byggkort">
 										<p class="text-blue">Har du byggkort?!</p>
 									</a>
-									<a class="" target="_blank" href="https://medium.com/besiktningsbloggen">
+									<a class=""  href="https://besiktningsman.se/blogg/index.html">
 										<p class="text-blue">Läs mer</p>
 									</a>
 								</li>
 								<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
-									<h3 class="margin-bottom-1">Byggintelligens</h3>
+									<h3 class="margin-bottom-1">Besiktningsbloggen</h3>
 									<a target="_blank" href="http://bit.ly/byggintelligens5_20182019">
-										<!-- <p class="common-Link">Tack för 2018 – ett bra år!</p> -->
+										<p class="common-Link">iSpect - En plattform som bidrar till effektivare byggprojekt.</p> 
 									</a>
-									<a href="http://bit.ly/byggintelligens2_2018_utveckling">
-										<p class="common-Link">Besiktningsbranschen ska utvecklas och synas!</p>
+									<a href="https://besiktningsman.se/blogg/?p=filfunktionen-i-ispect-bidrar-till-att-besiktningen-utf%C3%B6rs-mot-r%C3%A4tt-handlingar-publicerades-18-december-2020-redigera-artikeln-visa-statistik">
+										<p class="common-Link">Här är filfunktionen som bidrar till att besiktningen utförs mot rätt handlingar.</p>
 									</a>
 									<a href="http://bit.ly/byggintelligens1_2018_palsundet">
-										<p class="common-Link">Förstörelsen av Pålsundet</p>
+										<!-- https://besiktningsman.se/blogg/?p=har-du-byggkort -->
 									</a>
 									<a href="http://bit.ly/byggintelligens4_2017">
 										<!-- <p class="common-Link">Nu samlar vi kraft för 2018!</p> -->
@@ -421,7 +421,7 @@
 									</g>
 								</svg>
 							</a>
-							<a class="socialIcons" href="https://medium.com/besiktningsbloggen">
+							<a class="socialIcons" href="https://www.besiktningsman.se/blogg/index.html">
 								<svg version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" width="24"
 									height="24">
 									<g fill="none" fill-rule="evenodd">
