--- a/tjanster/entreprenad/slutbesiktning/bekraftelse/index.html
+++ b/tjanster/entreprenad/slutbesiktning/bekraftelse/index.html
@@ -211,7 +211,7 @@
 	<!-- BIG CTAS-->
 	<section class="slide whiteSlide" id="footer-nav">
 		<div class="padding-5 center">
-				<a href="https://medium.com/besiktningsbloggen" class="common-Link globalFooterCard soft-shadow white">
+				<a href="https://www.besiktningsman.se/blogg/index.html" class="common-Link globalFooterCard soft-shadow white">
 					<img src="../../../../../../../assets/img/nyheter/blogpage_card.png" alt="besiktningsman.se bloggen - Vi utvecklar och förnyar" />
 				</a>
 				<a href="../../../../../../../nyheter/" class="globalFooterCard soft-shadow white">
@@ -253,33 +253,33 @@
 								</a>
 							</li>
 							<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
-								<h3 class="margin-bottom-1">Besiktningsbloggen</h3>
-								<a class="" target="_blank" href="http://bit.ly/bm_debattartikel_svd">
+								<h3 class="margin-bottom-1">Debattartiklar</h3>
+								<a class="" href="https://besiktningsman.se/blogg/?p=besiktningsman-se-svarar-i-svd-p%C3%A5-debattinl%C3%A4gg-om-byggbranschens-systemfel">
 									<p class="text-blue">Besiktningsman.se svarar i SvD på debattinlägg om byggbranschens systemfel</p>
 								</a>
-								<a class="" target="_blank" href="https://medium.com/besiktningsbloggen/v%C3%A4lkommen-till-besiktningsbranschens-och-byggbranschens-nya-guld%C3%A5lder-a6b6a0ac238b">
+								<a class="" target="_blank" href="https://besiktningsman.se/blogg/?p=v%C3%A4lkommen-till-besiktningsbranschens-och-byggbranschens-nya-guld%C3%A5lder">
 									<p class="text-blue">Välkommen till besiktningsbranschens (och byggbranschens) nya guldålder!</p>
 								</a>
-								<a class="" target="_blank" href="https://medium.com/besiktningsbloggen/sluta-betala-oss-de0640a6b6c9">
+								<a class="" target="_blank" href="https://besiktningsman.se/blogg/?p=sluta-betala-oss">
 									<p class="text-blue">Sluta betala oss!</p>
 								</a>
-								<a class="" target="_blank" href="https://medium.com/besiktningsbloggen/har-du-byggkort-e2adb48b2508">
+								<a class="" target="_blank" href="https://besiktningsman.se/blogg/?p=har-du-byggkort">
 									<p class="text-blue">Har du byggkort?!</p>
 								</a>
-								<a class="" target="_blank" href="https://medium.com/besiktningsbloggen">
+								<a class=""  href="https://besiktningsman.se/blogg/index.html">
 									<p class="text-blue">Läs mer</p>
 								</a>
 							</li>
 								<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
-									<h3 class="margin-bottom-1">Byggintelligens</h3>
+									<h3 class="margin-bottom-1">Besiktningsbloggen</h3>
 									<a target="_blank" href="http://bit.ly/byggintelligens5_20182019">
-										<!-- <p class="common-Link">Tack för 2018 – ett bra år!</p> -->
+										<p class="common-Link">iSpect - En plattform som bidrar till effektivare byggprojekt.</p> 
 									</a>
-									<a href="http://bit.ly/byggintelligens2_2018_utveckling">
-										<p class="common-Link">Besiktningsbranschen ska utvecklas och synas!</p>
+									<a href="https://besiktningsman.se/blogg/?p=filfunktionen-i-ispect-bidrar-till-att-besiktningen-utf%C3%B6rs-mot-r%C3%A4tt-handlingar-publicerades-18-december-2020-redigera-artikeln-visa-statistik">
+										<p class="common-Link">Här är filfunktionen som bidrar till att besiktningen utförs mot rätt handlingar.</p>
 									</a>
 									<a href="http://bit.ly/byggintelligens1_2018_palsundet">
-										<p class="common-Link">Förstörelsen av Pålsundet</p>
+										<!-- https://besiktningsman.se/blogg/?p=har-du-byggkort -->
 									</a>
 									<a href="http://bit.ly/byggintelligens4_2017">
 										<!-- <p class="common-Link">Nu samlar vi kraft för 2018!</p> -->
@@ -309,7 +309,7 @@
 										<g fill="none" fill-rule="evenodd"><g fill-rule="nonzero"><path d="m32 30c0 1.104-0.896 2-2 2h-28c-1.104 0-2-0.896-2-2v-28c0-1.104 0.896-2 2-2h28c1.104 0 2 0.896 2 2v28z" fill="#47525D"/><g transform="translate(7 6)" fill="#fff"><rect y="5" width="4" height="14"/><path d="m13.499 5c-2.791 0-3.271 1.018-3.499 2v-2h-4v14h4v-8c0-1.297 0.703-2 2-2 1.266 0 2 0.688 2 2v8h4v-7c0-4-0.521-7-4.501-7z"/><circle cx="2" cy="2" r="2"/></g></g></g>
 									</svg>
                 </a>
-								<a class="socialIcons" href="https://medium.com/besiktningsbloggen">
+								<a class="socialIcons" href="https://www.besiktningsman.se/blogg/index.html">
 									<svg version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><g fill="none" fill-rule="evenodd"><g fill="#47525D" fill-rule="nonzero"><path d="m16 0c-8.8364 0-16 7.1627-16 15.999 0 8.8367 7.1639 16.001 16 16.001 8.8358 0 16-7.1639 16-16.001 0-8.8366-7.1639-15.999-16-15.999zm9.0762 10.604h-0.7289c-0.27069 0-0.65327 0.39038-0.65327 0.64029v9.0584c0 0.25023 0.38264 0.59129 0.65327 0.59129h0.7289l1.3e-4 2.1502h-6.604v-2.1502h1.3822v-9.5221h-0.067705l-3.2277 11.672h-2.499l-3.1861-11.672h-0.080635v9.522h1.3822v2.1502l-5.5288 6.5e-5v-2.1502h0.70791c0.29161 0 0.67426-0.34107 0.67426-0.59129v-9.0583c0-0.2499-0.38264-0.64029-0.67426-0.64029h-0.70791v-2.1502h6.9135l2.2699 8.447h0.062442l2.2909-8.447h6.8928v2.1502h-1.3e-4z"/></g></g>
 									</svg>
 								</a>
