Replaced the text about "slutbesiktning" with a link to the new "slutbesiktning" page

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -326,75 +326,11 @@
 							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
 							Förbesiktning
 						</a>
+						<a href="../brf/slutbesiktning/" class="common-Button text-blue" style="">
+							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
+							Slutbesiktning
+						</a>
 						<div class="accordion">
-							<h3>Slutbesiktning</h3>
-							<div>
-								<ul>
-									<li class="col-5-12">
-										<p class="bold margin-bottom-1">
-											Slutbesiktning är den besiktning som normalt sker vid kontraktstidens utgång
-											eller när projektet färdigställts. Den ger ett objektivt underlag för att
-											avgöra om entreprenadarbetet ska anses vara slutfört med godkännande.
-										</p>
-										<p>
-											Besiktningsman.se erbjuder slutbesiktning för nyproduktion och ROT enligt
-											regelverken AB04 och ABT 06 kap 7 (se nedan). Besiktningen utförs av
-											opartiska besiktningsmän godkända av SBR med särskild fackkompetens för
-											aktuellt
-											besiktningsobjekt. Vi erbjuder
-											även komplett besiktningsgrupp.
-										</p>
-										<p>
-											Besiktningen utförs okulärt och dokumenteras digitalt av besiktningsmannen
-											på plats. Felbilaga finns tillgänglig omgående efter besiktningen och
-											komplett utlåtande levereras inom 3 arbetsdagar.
-										</p>
-										<p>
-											Slutbesiktning kan beställas som en enstaka tjänst eller ingå i en
-											paketlösning med flera besiktningstjänster.
-											<br>
-											<br> Pris offereras separat.
-										</p>
-										<p class="bold margin-bottom-1">Enligt AB04 och ABT 06 kap 7</p>
-										<p>
-											• ”Besiktning enligt §§1-5 i detta kapitel 7 verkställs av en därtill lämpad
-											person som beställaren utser. Om parterna kommer överens om det kan
-											besiktningen i stället verkställas av en person som de gemensamt utser. Om
-											part underlåter
-											att medverka till
-											att besiktningsman utses för besiktning enligt §1 eller §4 i detta kapitel 7
-											får motparten utse besiktningsman.”
-										</p>
-										<p>• ”Slutbesiktning skall, om inte parterna avtalat om annat, verkställas vid
-											kontraktstidens utgång eller, om entreprenaden färdigställs senare, utan
-											dröjsmål efter det att entreprenaden anmälts vara färdigställd.
-											Entreprenören skall i
-											god tid
-											underrätta beställaren när entreprenaden beräknas vara färdigställd och
-											tillgänglig för slutbesiktning, om inte parterna genom besiktningsplan har
-											träffat särskild överenskommelse.”</p>
-										<p>• ”En del av entreprenaden kan efter parternas överenskommelse göras till
-											föremål för kompletterande slutbesiktning. Kompletterande slutbesiktning
-											utgör inte hinder för entreprenadens godkännande, om inte annat avtalats.”
-											Handledning
-											enligt BKKs
-											handledning för entreprenadbesiktning</p>
-										<p>• ”Slutbesiktningen är den för båda parter viktigaste besiktningen. Det
-											gäller nämligen här att pröva och avgöra frågan om godkännande av
-											entreprenaden, vilket i sin tur har många betydelsefulla konsekvenser för
-											parterna. Det bör
-											betonas, att
-											– om inte parterna kommer överens om annat – slutbesiktning ska ske först
-											vid kontraktstidens utgång eller om entreprenaden färdigställas senare, utan
-											dröjsmål efter det att entreprenören anmält entreprenaden färdigställd.”</p>
-										<a href="../../assets/documents/brf/brf_slutbesiktning.pdf" target="_blank">
-											<p class="text-blue">Läs vår pdf som beskriver i detalj vad en
-												slutbesiktning innebär</p>
-										</a>
-
-									</li>
-								</ul>
-							</div>
 							<h3>Ny slutbesiktning</h3>
 							<div>
 								<ul>
