--- a/tjanster/brf/slutbesiktning/index.html
+++ b/tjanster/brf/slutbesiktning/index.html
@@ -17,7 +17,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="En digital slutbesiktning innebär att alla felbilagor levereras till parter samma dag för omedelbar
 		avhjälpning." />
-	<meta property="og:description" content="Vill du ha Brf färdigställd snabbt och effektivt utan administrativt krångel?
+	<meta property="og:description" content="Vill du ha Brfen färdigställd snabbt och effektivt utan administrativt krångel?
 Då ska du boka din slutbesiktning hos oss." />
 	<meta property="og:url" content="https://www.besiktningsman.se/skanska/boka/" />
 	<meta property="og:site_name" content="https://www.besiktningsman.se">
