--- a/tjanster/brf/slutbesiktning/index.html
+++ b/tjanster/brf/slutbesiktning/index.html
@@ -342,7 +342,7 @@ Då ska du boka din slutbesiktning hos oss. " />
 										alt="Ikon som illusterar insikt" style="width:80px;">
 									<h3 class="equalElement common-BodyTitle">iSpect</h3>
 									<p class="common-BodyText">
-										Du får tillgång till sveriges endas besiktningsplattform. All data sparas även som resurs för förvaltningen.
+										Du får tillgång till sveriges enda besiktningsplattform. All data sparas även som resurs för förvaltningen.
 										<br> Läs mer här! 
 									</p>
 								</li>
