- Fixed a typo - Added an url to ispect.se

--- a/tjanster/brf/slutbesiktning/index.html
+++ b/tjanster/brf/slutbesiktning/index.html
@@ -343,7 +343,7 @@ Då ska du boka din slutbesiktning hos oss. " />
 									<h3 class="equalElement common-BodyTitle">iSpect</h3>
 									<p class="common-BodyText">
 										Du får tillgång till sveriges enda besiktningsplattform. All data sparas även som resurs för förvaltningen.
-										<br> Läs mer här! 
+										<br> <a href="https://ispect.se/" target="_blank" style="color:#3272b5">Läs mer här</a> 
 									</p>
 								</li>
 								<li class="col-4-12">
