--- a/tjanster/brf/slutbesiktning/index.html
+++ b/tjanster/brf/slutbesiktning/index.html
@@ -9,21 +9,18 @@
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="En digital slutbesiktning innebär att alla felbilagor levereras till parter samma dag för omedelbar
-		avhjälpning." />
+	<meta name="description" content="En digital slutbesiktning innebär att alla felbilagor levereras till parter samma dag för omedelbar avhjälpning." />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="En digital slutbesiktning innebär att alla felbilagor levereras till parter samma dag för omedelbar
-		avhjälpning." />
+	<meta property="og:title" content="En digital slutbesiktning innebär att alla felbilagor levereras till parter samma dag för omedelbar avhjälpning." />
 	<meta property="og:description" content="Vill du ha Brfen färdigställd snabbt och effektivt utan administrativt krångel?
 Då ska du boka din slutbesiktning hos oss." />
 	<meta property="og:url" content="https://www.besiktningsman.se/skanska/boka/" />
 	<meta property="og:site_name" content="https://www.besiktningsman.se">
 	<meta property="og:image" content="../assets/img/backgrounds/og_image.png" />
-	<meta name="twitter:title" content="En digital slutbesiktning innebär att alla felbilagor levereras till parter samma dag för omedelbar
-		avhjälpning." />
+	<meta name="twitter:title" content="En digital slutbesiktning innebär att alla felbilagor levereras till parter samma dag för omedelbar avhjälpning." />
 	<meta name="twitter:description" content="Vill du ha Brfen färdigställd snabbt och effektivt utan administrativt krångel?
 Då ska du boka din slutbesiktning hos oss. " />
 	<meta name="twitter:card" content="summary" />
