- Changed "main news" in Nyheter. - Added a photo to the archive.

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -238,17 +238,17 @@
 		<div class="container-xl">
 			<span class="featured-article">
 				<div class="featured-article-image">
-					<img src="../assets/img/backgrounds/newsroomMainArticle.png" alt="Abstract shapes">
+					<img src="../assets/img/backgrounds/richard news.png" alt="Abstract shapes">
 				</div>
 				<div class="featured-article-content">
 					<h2 class="featured-article-title">
-						Vi är mycket glada att förmedla att vi som första besiktningsföretag tecknat ett
-						nationellt avtal med <br> Skanska Sverige
+						Besiktningsman.se har nu skrivit ett ramavtal med Amasten.
 					</h2>
 					<h3 class="common-BodyText featured-article-subtitle">
-						Ett sådant samarbete är ett bevis på att Skanska,
-						som är en stor aktör såväl inom Sverige som internationellt,
-						medverkar till branschens utveckling mot ett säkrare och effektivare bygge.
+						Vi anser att avtalet återspeglar Amastens ambition att bidra till 
+						samhällsutvecklingen genom kvalitativ nyproduktion och värdeskapande förvaltning.
+						Med iSpect som resurs har Amasten möjlighet att identifiera brister, såsom vanligt 
+						förekommande fel, i syfte att förebygga dem.
 					</h3>
 				</div>
 			</span>
@@ -361,8 +361,8 @@
 		<!-- PR widget -->
 		<div class="contact" id="" style="">
 			<h2 class="common-BodyTitle">Presskontakt</h2>
-			<a href="mailto:magnus.janson@Besiktningsman.se">
-				<p class="common-Link">magnus.janson@besiktningsman.se</p>
+			<a href="mailto:max.rostov@Besiktningsman.se">
+				<p class="common-Link">max.rostov@besiktningsman.se</p>
 			</a>
 			<!-- <a href="tel:+46101654015">
 					<p class="common-Link">Tel: +46101654015</p>
